// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`For should render any list 1`] = `
<div
  data-testid="root-1"
>
  <span>
    1
  </span>
  <span>
    foo
  </span>
</div>
`;

exports[`For should render any list 2`] = `
<div
  data-testid="root-2"
>
  <span>
    2
  </span>
  <span>
    bar
  </span>
</div>
`;
